:money_with_wings: update swagger
